<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">GeneXus Smart Devices Generator</string>
  <string name="GX_AllItems">(All)</string>
  <string name="GX_BtnDelete">Delete</string>
  <string name="GX_BtnSearch">Search</string>
  <string name="GX_BtnSelect">Select</string>
  <string name="GX_TipRefresh">Refresh</string>
  <string name="GX_TipCopy">Copy</string>
  <string name="GXM_aboutcapt">About</string>
  <string name="GXM_ApplicationServerError">An error occurred on the application server (%1$s).</string>
  <string name="GXM_AudioDescription">Audio</string>
  <string name="GXM_button_ok">OK</string>
  <string name="GXM_CallNumber">Call…</string>
  <string name="GXM_cancel">Cancel</string>
  <string name="GXM_search">Search</string>
  <string name="GXM_captionadd">Insert</string>
  <string name="GXM_ConvertTo">Convert to\n%1$s</string>
  <string name="GXM_CouldNotGetLocationInformation">Could not get location information</string>
  <string name="GXM_DataFiltered">Filter applied (%1$s).</string>
  <string name="GXM_DataSearched">Search for \&#39;%1$s\&#39;.</string>
  <string name="GXM_Date">Date</string>
  <string name="GXM_del">Invalid delete, related information in %1$s</string>
  <string name="GXM_Deleting">Deleting…</string>
  <string name="GXM_Downloading">Downloading…</string>
  <string name="GXM_err_details">Details</string>
  <string name="GXM_ErrorLoadingMetadata">An error occurred while loading \&#39;%1$s\&#39;.</string>
  <string name="GXM_errtitle">Error</string>
  <string name="GXM_False">False</string>
  <string name="GXM_Filter">Filter</string>
  <string name="GXM_FilterAndOrder">Filter and Order</string>
  <string name="GXM_FilterRange">%1$s - %2$s</string>
  <string name="GXM_FilterRangeFrom">From %1$s</string>
  <string name="GXM_FilterRangeTo">Up to %1$s</string>
  <string name="GXM_getbeforeupd">Please \&#39;Get\&#39; data before trying to update it.</string>
  <string name="GXM_Hybrid">Hybrid</string>
  <string name="GXM_insert">Insert</string>
  <string name="GXM_InvalidApplication">Application could not be loaded.\nUri: %1$s\nObject: %2$s</string>
  <string name="GXM_InvalidDefinition">\&#39;%1$s\&#39; has an invalid definition.</string>
  <string name="GXM_InvalidEvent">Event cannot be executed.\nCode:\n%1$s</string>
  <string name="GXM_InvalidHttpMode">Method \&#39;%1$s\&#39; is forbidden for \&#39;%2$s\&#39;.</string>
  <string name="GXM_InvalidMode">%1$s cannot proceed.\n\n%2$s</string>
  <string name="GXM_keynfound">Data with the specified key could not be found.</string>
  <string name="GXM_Loading">Loading…</string>
  <string name="GXM_Locate">Locate…</string>
  <string name="GXM_LocationServicesAreDisabled">Location services are disabled</string>
  <string name="GXM_Login">Login</string>
  <string name="GXM_LoginOk">Logged in</string>
  <string name="GXM_Logout">Logout</string>
  <string name="GXM_mbview_next">Next</string>
  <string name="GXM_mbview_previous">Previous</string>
  <string name="GXM_mnuconfirm">Confirm</string>
  <string name="GXM_mnudelete">Delete</string>
  <string name="GXM_MyLocation">My Location</string>
  <string name="GXM_NetworkError">A network error occurred while trying to reach the server (%1$s).</string>
  <string name="GXM_NewVersionAvailable">New version available</string>
  <string name="GXM_NewVersionInstallQuestion">There is a new major version available.</string>
  <string name="GXM_NoApplicationAvailable">No apps can perform this action.</string>
  <string name="GXM_NoInternetConnection">No Internet Connection.</string>
  <string name="GXM_NoLayout">No Layout available.</string>
  <string name="GXM_NoNext">No next item.</string>
  <string name="GXM_NoPrevious">No previous item.</string>
  <string name="GXM_NoScannerAvailable">Barcode Scanner is not installed.</string>
  <string name="GXM_noupdate">Record already exists</string>
  <string name="GXM_Now">Now</string>
  <string name="GXM_Order">Order</string>
  <string name="GXM_OtherLocation">Other</string>
  <string name="GXM_OutOfMemory">Not enough memory is available for this operation.</string>
  <string name="GXM_password">Password</string>
  <string name="GXM_PleaseWait">Please wait…</string>
  <string name="GXM_Preferences">Preferences</string>
  <string name="GXM_recdel">Data was deleted.</string>
  <string name="GXM_recdeleted">Error - Record was deleted by another user.</string>
  <string name="GXM_recins">Data was inserted.</string>
  <string name="GXM_RecordAudio">Record an Audio</string>
  <string name="GXM_RecordVideo">Record a Video</string>
  <string name="GXM_recupd">Data was updated.</string>
  <string name="GXM_Reset">Reset</string>
  <string name="GXM_Satellite">Satellite</string>
  <string name="GXM_Save">Save</string>
  <string name="GXM_Saving">Saving…</string>
  <string name="GXM_Scan">Scan</string>
  <string name="GXM_SelectAudio">Select an Audio…</string>
  <string name="GXM_SelectedItems">%1$s item(s) selected.</string>
  <string name="GXM_SelectImage">Select an Image…</string>
  <string name="GXM_SelectLocation">Select Location</string>
  <string name="GXM_SelectMapType">Select Map Type</string>
  <string name="GXM_SelectVideo">Select a Video…</string>
  <string name="GXM_SendEmail">Send e-mail…</string>
  <string name="GXM_SendSMS">Send SMS…</string>
  <string name="GXM_ServerUrl">Server URL</string>
  <string name="GXM_ServerUrlEmpty">Your server URL is empty.</string>
  <string name="GXM_ServerUrlIncorrect">Your server URL is incorrect.</string>
  <string name="GXM_Standard">Standard</string>
  <string name="GXM_StreamLoading">%1$s (loading)</string>
  <string name="GXM_StreamPlaying">%1$s (playing)</string>
  <string name="GXM_sucadded">Data has been successfully added.</string>
  <string name="GXM_sucdeleted">Data has been successfully deleted.</string>
  <string name="GXM_sucupdated">Data has been successfully updated.</string>
  <string name="GXM_TakePhoto">Take a Photo</string>
  <string name="GXM_TapMapToSelect">Tap the map to select a location.</string>
  <string name="GXM_TapToPlay">Tap to play.</string>
  <string name="GXM_Time">Time</string>
  <string name="GXM_True">True</string>
  <string name="GXM_TwitterInvalidUsername">Invalid Twitter username</string>
  <string name="GXM_TwitterNetworkIssue">Network issue occurred</string>
  <string name="GXM_TwitterOperationError">Twitter operation error</string>
  <string name="GXM_unexp">An unexpected error has occurred while updating your data. Please try again.</string>
  <string name="GXM_Unknown">Unknown</string>
  <string name="GXM_update">Update</string>
  <string name="GXM_UpdatingApplication">Updating Application…</string>
  <string name="GXM_ErrorUpdatingApp">Error Updating Application</string>
  <string name="GXM_Uploading">Uploading…</string>
  <string name="GXM_user">User name</string>
  <string name="GXM_UserInfo">User Information</string>
  <string name="GXM_VideoErrorTitle">Couldn\&#39;t play video</string>
  <string name="GXM_VideoErrorMsg">Do you want to try with another player?</string>
  <string name="GXM_view">View</string>
  <string name="GXM_ViewInBrowser">View in Browser</string>
  <string name="GXM_WaitingForLocation">Waiting for location…</string>
  <string name="GXM_waschg">%1$s was changed.</string>
  <string name="GXM_ReceivingData">Receiving data</string>
  <string name="GXM_ReceivingProgress">Receiving in progress</string>
  <string name="GXM_ReceptionFailed">Data reception failed</string>
  <string name="GXM_ReceptionCompleted">Data reception completed</string>
  <string name="GXM_YoutubeError">There was an error initializing the YouTube player (%1$s$s)</string>
  <string name="GXM_No">No</string>
  <string name="GXM_Yes">Yes</string>
  <string name="GXM_BarcodeScanner">Barcode Scanner</string>
  <string name="GXM_BarcodeScannerInstallQuestion">\&quot;Barcode Scanner\&quot; is not installed. Install now?</string>
  <string name="GXM_BluetoothDevices">Bluetooth Devices</string>
  <string name="GXM_SelectBluetoothPrinter">Select a Bluetooth printer</string>
  <string name="GXM_OpenWith">Open with</string>
  <string name="GXM_DoYouWantBiometricQuestion">Do you want to use %1$s to remember credentials?</string>
  <string name="GXM_AuthenticateTitle">%1$s</string>
  <string name="GXM_AuthenticateDescriptionLogin">Login using stored credentials</string>
  <string name="GXM_AuthenticateDescriptionSave">Save credentials</string>
  <string name="GXM_FingerprintTitle">Fingerprint</string>
  <string name="GXM_FingerprintQuestion">your fingerprint</string>
  <string name="GXM_LocationUpdate">Location Updated: %1$s</string>
  <string name="GXM_LocationUpdating">Updating location</string>
  <string name="GXM_FileQuestion">File %1$s already exists. Replace it?</string>
  <string name="GXM_FileReplace">Replace</string>
  <string name="GXM_FileRename">Rename</string>
</resources>
