<?xml version="1.0" encoding="utf-8"?>
<com.genexus.android.core.controls.GxLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/GxLinearLayoutFilter"
    >

	<!-- Actual Action Bar -->
	<include
		layout="@layout/action_bar_tool_bar"
		/>

    <View android:id="@+id/toolbar_shadow"
          android:layout_width="match_parent"
          android:layout_height="@dimen/action_bar_default_elevation"
          android:background="?attr/actionBarShadowBackground"
        />

    <TextView android:id="@+id/textViewFilter"
			android:textColor="#000"
			android:textColorHighlight="#000"
			android:background="#DDD"
			android:visibility="gone"
			android:layout_width="match_parent"
			android:text=""
			android:layout_height="wrap_content"/>
			
	<ListView android:id="@+id/FiltersListView" 
	android:layout_width="match_parent"
	android:layout_height="0dp"
	android:layout_weight="1">
	
	</ListView>
	
	<TextView android:id="@+id/textViewOrder"
			android:textColor="#000"
			android:textColorHighlight="#000"
			android:background="#DDD"
			android:visibility="gone"
			android:layout_width="match_parent"
			android:text=""
			android:layout_height="wrap_content"/>
		
	<com.genexus.android.core.controls.GxLinearLayout
	  android:id="@+id/layoutOrder"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_gravity="bottom"
      android:layout_weight="1" >
      	<com.genexus.android.core.controls.GxRadioGroupThemeable xmlns:android="http://schemas.android.com/apk/res/android"
    		android:id="@+id/radioGroupOrder"
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="vertical">
		</com.genexus.android.core.controls.GxRadioGroupThemeable>
  </com.genexus.android.core.controls.GxLinearLayout>
		
	<LinearLayout android:id="@+id/LinearLayoutFooter" 
	    android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:visibility="gone"
    >


	<TextView android:id="@+id/TextView01" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" android:text="@string/GXM_Loading">
	</TextView>
    
	</LinearLayout>
	<LinearLayout
	                android:id="@+id/buttons"
	                android:orientation="horizontal"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                style="@android:style/ButtonBar"
						>
	                <com.genexus.android.core.controls.GxButton
	                        android:id="@+id/formSearchButton"
	                        android:layout_width="match_parent"
	                        android:layout_height="wrap_content"
	                        android:layout_weight="50"
	                        android:text="@string/GX_BtnSearch"/>
	                  <com.genexus.android.core.controls.GxButton
	                        android:id="@+id/formResetButton"
	                        android:layout_width="match_parent"
	                        android:layout_height="wrap_content"
	                        android:layout_weight="50"
	                        android:text="@string/GXM_Reset"
	                        />
	 </LinearLayout>
</com.genexus.android.core.controls.GxLinearLayout>
